src/test/ui/suggestions/suggest-move-lifetimes.stderr
error: lifetime parameters must be declared prior to type parameters
  --> $DIR/suggest-move-lifetimes.rs:1:13
   |
LL | struct A<T, 'a> {
   |             ^^
help: move the lifetime parameter prior to the first type parameter
   |
LL | struct A<'a, T> {
   |          ^^^ --

error: lifetime parameters must be declared prior to type parameters
  --> $DIR/suggest-move-lifetimes.rs:5:13
   |
LL | struct B<T, 'a, U> {
   |             ^^
help: move the lifetime parameter prior to the first type parameter
   |
LL | struct B<'a, T, U> {
   |          ^^^   --

error: lifetime parameters must be declared prior to type parameters
  --> $DIR/suggest-move-lifetimes.rs:10:16
   |
LL | struct C<T, U, 'a> {
   |                ^^
help: move the lifetime parameter prior to the first type parameter
   |
LL | struct C<'a, T, U> {
   |          ^^^    --

error: lifetime parameters must be declared prior to type parameters
  --> $DIR/suggest-move-lifetimes.rs:15:16
   |
LL | struct D<T, U, 'a, 'b, V, 'c> {
   |                ^^  ^^     ^^
help: move the lifetime parameter prior to the first type parameter
   |
LL | struct D<'a, 'b, 'c, T, U, V> {
   |          ^^^ ^^^ ^^^      ---

error: aborting due to 4 previous errors

